--- a/FallKing/.gitignore
+++ b/FallKing/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/FallKing/[Ll]ibrary/
-/FallKing/[Tt]emp/
-/FallKing/[Oo]bj/
-/FallKing/[Bb]uild/
-/FallKing/[Bb]uilds/
-/FallKing/[Ll]ogs/
-/FallKing/[Uu]ser[Ss]ettings/
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/[Ll]ogs/
+/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
